# chess-ancient

./: .gitignore  chess_evaluation_model.h5  chessbaseFEN.epd  chessbaseTest.pgn  pom.xml  test_prediction.csv  trained_network.ser
.playwright-cli/: page-2026-05-05T20-28-46-160Z.yml
chess-resurected/: .gitignore  README.md
chess-resurected/docs/: architecture.md
chess-resurected/engine/: Cargo.toml
chess-resurected/engine/src/: lib.rs  main.rs
chess-resurected/engine/tests/: cli.rs  engine_smoke.rs  perft.rs
chess-resurected/models/: eval_report.json  ladder_report.json  pipeline_settings.json  selfplay_filter_report.json  selfplay_raw_report.json  settings.json  train_config.json  train_metrics.json
chess-resurected/models/cuda-mainline/: eval_report.json  ladder_report.json  selfplay_filter_report.json  selfplay_raw_report.json  train_config.json  train_metrics.json
chess-resurected/models/ui-smoke/: eval_report.json  selfplay_filter_report.json  (+3 more)
chess-resurected/python/: pyproject.toml
chess-resurected/python/chess_resurected/: __init__.py  dataset.py  engine_bridge.py  eval_baseline.py  features.py  filter_dataset.py  generate_selfplay.py  mcts.py  mcts_pipeline.py  model.py  play_ladder.py  records.py  selfplay.py  train_baseline.py  training_data.py  validation.py
chess-resurected/python/tests/: test_dataset_pipeline.py  test_mcts_pipeline.py  test_records.py  test_training_smoke.py
chess-resurected/ui/: app.py  engine_bridge.py  flask_err.txt  flask_out.txt  training.py
docs/: chess-resurected-learning-plan.md  resurrection-plan.md
(+47 files in other folders)
